# toollib

./: .gitignore  .history  LICENSE  MANIFEST.in  README.md  package-lock.json  package.json  pyproject.toml  setup.cfg  setup.py  versions.py
docs/: __init__.py  helper.html  helper.md
docs/.vuepress/: config.ts
docs/en/: README.md
docs/en/guide/: introduce.md  usage.md
docs/zh/guide/: install.md  introduce.md
toollib/: __debug__.py  __init__.py  apsched.py  autodriver.py  cipher.py  codec.py  crypto.py  debug.py  decorator.py  exception.py  global.py  guid.py  kvalue.py  locker.py  log.py  logu.py  main.py  py2pyder.py  pyd.py  redis_cli.py  rediscli.py  rediser.py  regexp.py  snowflake.py  sqlacrud.py  useragent.py  utils.py  validator.py  webdriver.py  xlsx.py
toollib/common/: __init__.py  constor.py  error.py  rarfile.py  zipfile.py
toollib/libs/: __init__.py  _decorator.py  _exception.py  _g.py  _singleton.py  _time.py  _utils.py  decorator.py  decorator_utils.py  g.py  singleton.py  time_utils.py  utils.py  webdriver.py
toollib/tcli/: __init__.py  __main__.py  base.py  cmder.py  helper.py  option.py
toollib/tcli/commands/: __init__.py  _bash.py  _docker.py  _grpc.py  _pkgup.py  _py2pyd.py  _pydpack.py  _pyi.py  _pyseti.py  _repkgs.py  _set_conda.py  _set_mirrors.py  _set_pip.py  _set_source.py  _set_sshkey.py  _set_vscode.py  _set_yum.py  _setconda.py  _setpip.py  _snowflake.py  _sync.py  _tmpl2bash.py  _tpl2bash.py  _tpl2grpc.py  byter.py
toollib/tcli/commands/plugins/: __init__.py  aliyun_mirrors.py  bash_tmpl.py  bash_tpl.py  docker-compose.yaml  docker-compose.yml  grpc_tpl.py  set_source.sh.x  set_sshkey.sh  set_sshkey.sh.x  set_vscode.py  set_yum.sh.x  snowflake_service.py  sync.py  tpl_bash.py  tpl_grpc.py
toollib/utils/: Chars_.py  RedirectStd12ToNull_.py  Singleton_.py  VersionCmper_.py  _Chars.py  _ConfLoader.py  _ConfModel.py  _ConfigLoader.py  _JsonComparator.py  _JsonDiff.py  _Singleton.py  _VersionCmper.py  _YamlConfig.py  __init__.py  _copytree.py  _decompress.py  _detect_encoding.py  _gen_leveldirs.py  _get_cls_attrs.py  _home.py  _listfile.py  _localip.py  _map_jsontype.py  _now2timestamp.py  _now2timestr.py  _parse_variable.py  _read_csv.py  _read_xlsx.py  _split_csv.py  _split_xlsx.py  _sysname.py  _timerange.py  _timestamp2time.py  _timestr2time.py  _types.py  _writetemp.py  home_.py  listfile_.py  map_jsontype_.py  now2timestr_.py  (+5 more)
