[metadata]
name = toollib
#version = 1.0.0  # see setup.py
author = axiner
author_email = atpuxiner@163.com
url = https://github.com/atpuxiner/toollib
description = toollib
license = MIT
platforms = any
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = True
python_requires = >= 3.6
zip_safe = False

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    tcli = toollib.tcli.__main__:main
